--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/socialite": "^2.0",
          "tymon/jwt-auth": "0.5.*",
          "graham-campbell/github": "~4.1",
-        "adamwathan/eloquent-oauth-l5": "^0.3.1"
+        "adamwathan/eloquent-oauth-l5": "^0.3.1",
+        "knplabs/github-api": "^1.5",
+        "illuminate/html": "^5.0"
        
 
     },
